tmp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger
spec:
  rules:
  - host: jaeger.k3.acornsoft.io
    http:
      paths:
      - backend:
          service:
            name: jaeger-operator-jaeger-query
            port:
              number: 16686
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - jaeger.k3.acornsoft.io
    secretName: tls-acornsoft-star
